<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/colorBackground" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/topBarHolder" android:background="@color/colorBackground" android:layout_width="0.0dp" android:layout_height="wrap_content" app:elevation="0.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/topBar" android:background="@color/colorBackground" android:paddingLeft="14.0dp" android:paddingRight="14.0dp" android:layout_width="match_parent" android:layout_height="64.0dp" android:paddingHorizontal="14.0dp">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/logoGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <ImageView android:layout_width="22.0dp" android:layout_height="22.0dp" android:src="@drawable/ic_logo_tv" android:contentDescription="@string/app_name" android:layout_marginEnd="8.0dp" />
                <TextView android:textSize="18.0sp" android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Bayyari-" android:fontFamily="sans-serif-black" android:letterSpacing="-0.02" />
                <TextView android:textSize="18.0sp" android:textColor="@color/colorTextPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TV" android:fontFamily="sans-serif-black" android:letterSpacing="-0.02" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/rightCluster" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
                <ImageView android:id="@id/iconSearch" android:background="@drawable/bg_iconbtn_circle" android:padding="8.0dp" android:layout_width="36.0dp" android:layout_height="36.0dp" android:src="@drawable/ic_search" android:contentDescription="@string/nav_search" android:layout_marginEnd="8.0dp" />
                <ImageView android:id="@id/iconBell" android:background="@drawable/bg_iconbtn_circle" android:padding="8.0dp" android:layout_width="36.0dp" android:layout_height="36.0dp" android:src="@drawable/ic_bell" android:contentDescription="@string/nav_favorites" android:layout_marginEnd="8.0dp" />
                <TextView android:textSize="11.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/avatar" android:background="@drawable/bg_avatar_gradient" android:layout_width="36.0dp" android:layout_height="36.0dp" android:text="JD" android:fontFamily="sans-serif-black" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <HorizontalScrollView android:id="@id/navScroll" android:paddingLeft="14.0dp" android:paddingRight="14.0dp" android:paddingBottom="10.0dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" android:overScrollMode="never" android:paddingHorizontal="14.0dp">
            <LinearLayout android:orientation="horizontal" android:id="@id/navChipsRow" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="@color/colorPrimary" android:id="@id/chipHome" android:background="@drawable/bg_navchip_active" android:paddingLeft="16.0dp" android:paddingTop="8.0dp" android:paddingRight="16.0dp" android:paddingBottom="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nav_home" android:fontFamily="sans-serif-medium" android:layout_marginEnd="4.0dp" android:paddingHorizontal="16.0dp" android:paddingVertical="8.0dp" />
                <TextView android:textSize="14.0sp" android:textColor="@color/colorTextSecondary" android:id="@id/chipLive" android:background="?android:selectableItemBackground" android:paddingLeft="16.0dp" android:paddingTop="8.0dp" android:paddingRight="16.0dp" android:paddingBottom="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nav_live" android:fontFamily="sans-serif-medium" android:layout_marginEnd="4.0dp" android:paddingHorizontal="16.0dp" android:paddingVertical="8.0dp" />
                <TextView android:textSize="14.0sp" android:textColor="@color/colorTextSecondary" android:id="@id/chipMovies" android:background="?android:selectableItemBackground" android:paddingLeft="16.0dp" android:paddingTop="8.0dp" android:paddingRight="16.0dp" android:paddingBottom="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nav_movies" android:fontFamily="sans-serif-medium" android:layout_marginEnd="4.0dp" android:paddingHorizontal="16.0dp" android:paddingVertical="8.0dp" />
                <TextView android:textSize="14.0sp" android:textColor="@color/colorTextSecondary" android:id="@id/chipSeries" android:background="?android:selectableItemBackground" android:paddingLeft="16.0dp" android:paddingTop="8.0dp" android:paddingRight="16.0dp" android:paddingBottom="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nav_series" android:fontFamily="sans-serif-medium" android:layout_marginEnd="4.0dp" android:paddingHorizontal="16.0dp" android:paddingVertical="8.0dp" />
                <TextView android:textSize="14.0sp" android:textColor="@color/colorTextSecondary" android:id="@id/chipCatchup" android:background="?android:selectableItemBackground" android:paddingLeft="16.0dp" android:paddingTop="8.0dp" android:paddingRight="16.0dp" android:paddingBottom="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nav_catchup" android:fontFamily="sans-serif-medium" android:layout_marginEnd="4.0dp" android:paddingHorizontal="16.0dp" android:paddingVertical="8.0dp" />
                <TextView android:textSize="14.0sp" android:textColor="@color/colorTextSecondary" android:id="@id/chipSettings" android:background="?android:selectableItemBackground" android:paddingLeft="16.0dp" android:paddingTop="8.0dp" android:paddingRight="16.0dp" android:paddingBottom="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nav_settings" android:fontFamily="sans-serif-medium" android:paddingHorizontal="16.0dp" android:paddingVertical="8.0dp" />
            </LinearLayout>
        </HorizontalScrollView>
        <View android:background="@color/colorOutline" android:layout_width="match_parent" android:layout_height="1.0dp" />
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout android:id="@id/nav_host_fragment" android:layout_width="0.0dp" android:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/topBarHolder" />
</androidx.constraintlayout.widget.ConstraintLayout>
