<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/colorBackground" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingLeft="20.0dp" android:paddingTop="48.0dp" android:paddingRight="20.0dp" android:paddingBottom="48.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="20.0dp" android:paddingVertical="48.0dp">
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_card_rounded" android:paddingLeft="28.0dp" android:paddingTop="36.0dp" android:paddingRight="28.0dp" android:paddingBottom="36.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="6.0dp" android:layout_marginRight="6.0dp" android:elevation="6.0dp" android:layout_marginHorizontal="6.0dp" android:paddingHorizontal="28.0dp" android:paddingVertical="36.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dp">
                <ImageView android:layout_width="28.0dp" android:layout_height="28.0dp" android:src="@drawable/ic_logo_tv" android:contentDescription="@string/app_name" android:layout_marginEnd="10.0dp" />
                <TextView android:textSize="22.0sp" android:textColor="@color/colorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Bayyari-" android:fontFamily="sans-serif-black" />
                <TextView android:textSize="22.0sp" android:textColor="@color/colorTextPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TV" android:fontFamily="sans-serif-black" />
            </LinearLayout>
            <TextView android:textSize="22.0sp" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Add M3U playlist" android:fontFamily="sans-serif-black" />
            <TextView android:textSize="14.0sp" android:textColor="@color/colorTextSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dp" android:layout_marginBottom="24.0dp" android:text="Paste the M3U URL provided by your IPTV server." />
            <TextView android:textAppearance="@style/TextAppearance.Bayyari.FieldLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dp" android:text="@string/server_label" />
            <com.google.android.material.textfield.TextInputEditText android:textSize="15.0sp" android:textColor="@color/colorTextPrimary" android:textColorHint="@color/colorTextHint" android:id="@id/editLabel" android:background="@drawable/bg_input_field" android:paddingLeft="14.0dp" android:paddingTop="12.0dp" android:paddingRight="14.0dp" android:paddingBottom="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="14.0dp" android:hint="My playlist" android:inputType="text" android:paddingHorizontal="14.0dp" android:paddingVertical="12.0dp" />
            <TextView android:textAppearance="@style/TextAppearance.Bayyari.FieldLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dp" android:text="@string/m3u_url" />
            <com.google.android.material.textfield.TextInputEditText android:textSize="15.0sp" android:textColor="@color/colorTextPrimary" android:textColorHint="@color/colorTextHint" android:id="@id/editM3u" android:background="@drawable/bg_input_field" android:paddingLeft="14.0dp" android:paddingTop="12.0dp" android:paddingRight="14.0dp" android:paddingBottom="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="22.0dp" android:hint="http://example.com/playlist.m3u" android:inputType="textUri" android:paddingHorizontal="14.0dp" android:paddingVertical="12.0dp" />
            <com.google.android.material.button.MaterialButton android:id="@id/buttonSave" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/action_save" style="@style/Widget.Bayyari.Button.Primary" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
